--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,14 +24,15 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
   <Header />
   <main id="main-content" data-layout="index">
     <section id="hero" class="pt-8 pb-6">
-      <h1 class="my-4 inline-block text-4xl font-bold sm:my-8 sm:text-5xl">
-        Mingalaba
+      <h1 class="my-4 inline-block text-3xl font-bold sm:my-8 sm:text-4xl">
+        Between Code & Chill
       </h1>
-      <a
+
+      <!-- <a
         target="_blank"
         href="/rss.xml"
         class="inline-block"
-        aria-label="rss feed"
+        aria-label="RSS 订阅"
         title="RSS Feed"
       >
         <IconRss
@@ -39,33 +40,29 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
           height={20}
           class="scale-125 stroke-accent stroke-3 rtl:-rotate-90"
         />
-        <span class="sr-only">RSS Feed</span>
-      </a>
+        <span class="sr-only">RSS 订阅</span>
+      </a> -->
 
-      <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+      <p class="mt-3 leading-7">
+        被计算机“点名”的普通路人甲，日常在代码与躺平之间反复横跳。
+        偶尔打开公开课假装努力，连 LeetCode 第一题也能卡半天。
+        学校水课没学到多少本事，倒是练就了在不挂科前提下的优雅缺席。
       </p>
-      <p class="mt-2">
-        Read the blog posts or check
-        <LinkButton
-          class="underline decoration-dashed underline-offset-4 hover:text-accent"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
+
+      <p class="mt-2 leading-7">
+        也许是喜欢折腾，也许只是想有个能记录自己的小角落，于是就先搭了这个博客。
+        喜欢计算机，但也常常被它“教育”。慢慢来，边学边记。
       </p>
-      {
-        // only display if at least one social link is enabled
+
+      <!-- {
+        // 仅当存在社交链接时显示
         SOCIALS.length > 0 && (
           <div class="mt-4 flex flex-col sm:flex-row sm:items-center">
-            <div class="me-2 mb-1 whitespace-nowrap sm:mb-0">Social Links:</div>
+            <div class="me-2 mb-1 whitespace-nowrap sm:mb-0">社交链接：</div>
             <Socials />
           </div>
         )
-      }
+      } -->
     </section>
 
     <Hr />
